# StructLayout

./: .gitignore  LICENSE  README.md
.github/workflows/: BuildExtension.yml  Release.yml
ClangMods/: raw_ostream.cpp  raw_ostream.h
LayoutParser/: LayoutParser.sln  LayoutParser.vcxproj  LayoutParser.vcxproj.filters
LayoutParser/src/: main.cpp
Parsers/ClangLayout/: ClangLayout.sln  ClangLayout.vcxproj  CompileScoreSettings.json
Parsers/PDBLayout/: PDBLayout.sln  PDBLayout.vcxproj  PDBLayout.vcxproj.filters  StructLayoutSettings.json
Parsers/Shared/: IO.cpp  IO.h  LayoutDefinitions.h
StructLayout/: StructLayout.csproj  StructLayout.sln  StructLayoutPackage.cs  StructLayoutPackage.vsct  StructLayoutSettings.cs  source.extension.vsixmanifest
StructLayout/Common/: ColorTheme.cs  Documentation.cs  FileWatcher.cs  LayoutColors.cs  LayoutParser.cs  OutputLog.cs  WindowProxy.cs
StructLayout/Editor/: EditorProcessor.cs  EditorUtils.cs  MacroEvaluator.cs  ParseCommand.cs  ParseMessageControl.xaml  ParseMessageControl.xaml.cs  ParseMessageWindow.cs  SettingsCommand.cs
StructLayout/LayoutWindow/: LayoutNodeTooltip.xaml  LayoutNodeTooltip.xaml.cs  LayoutViewer.xaml  LayoutViewer.xaml.cs  LayoutWindow.cs  LayoutWindowCommand.cs  LayoutWindowControl.xaml  LayoutWindowControl.xaml.cs
StructLayout/Settings/: AboutWindow.xaml  AboutWindow.xaml.cs  (+4 more)
TestProject/: TestProject.cpp  TestProject.sln  TestProject.vcxproj  TestProject.vcxproj.filters
TestProjects/CMake/: CMakeLists.txt  CMakeSettings.json  StructLayoutSettings.json
TestProjects/CMake/src/: main.cpp
(+70 files in other folders)
